# SIMPLE-db

./: .gitignore  .travis.yml  BDNYCv1.0.db  BDNYCv1.1.db  CODE_OF_CONDUCT.md  Demo_Queries_1.0.ipynb  Demo_Queries_1.5.ipynb  Demo_Visualization_1.0.ipynb  Demo_Visualization_1.5.ipynb  LICENSE  Procfile  QueryDemo.ipynb  README.md  REFERENCE_TABLES.py  SIMPLE.db  SIMPLE.db-journal  Untitled Diagram.xml  Untitled.ipynb  Untitled1.ipynb  VisualizingDemo.ipynb  app.py  app_v1.py  bdnyc_database.db  bdnycapp.wsgi  catwise_matches.csv  database.db  database.toml  environment.yml  environment2.yml  identify unreadable spectra.py  practice.py  pyproject.toml  requirements.txt  runapp.py  s23-ingest.ipynb  sanghi23_ingest.py  sangi23_ingest.py  schema.yaml  temp.db  temp.txt  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
Scripts/: dr_testing.py
bdnyc_app/: app.py
data/: 1rxs_j034231.8+121622_b.json  1rxs_j115928.5-524717.json  1rxs_j160929.1-210524b.json  1rxs_j235133.3+312720_b.json  2mass_0441+2301_aab.json  2mass_0441+2301_bab.json  2mass_j00001354+2554180.json  2mass_j00002867-1245153.json  2mass_j00011217+1535355.json  2mass_j00034227-2822410.json  2mass_j00040288-6410358 2.json  2mass_j00040288-6410358.json  2mass_j00043484-4044058.json  2mass_j00044144-2058298.json  2mass_j00045753-1709369.json  2mass_j00054844-2157196.json  2mass_j00070787-2458042.json  2mass_j00085931+2911521.json  2mass_j00100009-2031122.json  2mass_j00110940+5149236.json  2mass_j00132229-1143006.json  2mass_j00135882-1816462.json  2mass_j00145575-4844171 2.json  (+3716 more)
(+4165 files in other folders)
